--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bcrypt": "^0.8.5",
     "body-parser": "^1.13.2",
     "ejs": "^2.3.3",
+    "express-ejs-layouts": "^2.0.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
@@ -21,7 +22,8 @@
     "passport": "^0.3.2",
     "passport-facebook": "^2.0.0",
     "passport-local": "^1.0.0",
-    "serve-favicon": "^2.3.0"
+    "serve-favicon": "^2.3.0",
+    "glob": "^5.0.3"
   },
   "license": "ISC"
 }
