--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,8 @@
   "version": "0.0.1",
   "dependencies": {
     "angular": "~1.4.8",
-    "angular-ui-router": "~0.2.15"
+    "angular-ui-router": "~0.2.15",
+    "angularjs-datepicker": "~0.2.16",
+    "angular-ui-map": "~0.5.0"
   }
 }
