--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "angular": "^1.4.8",
     "angular-ui-router": "^0.2.15",
+    "angularjs-datepicker": "^0.2.16",
     "bcrypt": "^0.8.5",
     "body-parser": "^1.13.2",
     "compression": "^1.5.2",
